Freeze while rendering animation in Cycles with layers and motion blur #40149

Closed
opened 2014-05-12 03:30:59 +02:00 by Konstantins Visnevskis · 7 comments

Win 8.1 x64, 3x gtx580, 2.70a

When rendering multiple layers in a batch animation with motion blur, some layers get extremely slow (compared to rendering one by one) and freeze Blender or whole system.

Open attached file, press render animation.
First (Mesh) layer renders fine, the second (floor/shadow) behaves like:

  • On CPU - extremely slow (compared to rendering only this render layer. not to confuse with scene layer), cancellation takes couple of minutes.
  • On all GPUs - system freeze (presumably it stays alive, but display gets no updates anymore).
  • On single non-primary GPU - extremely slow, blocks don't get updated until complete. Render cancellation takes a minute or two.

This behavior is not observed if motion blur is turned off.
This behavior is not observed if render layers are rendered one by one, manually un-chec the others, even with motion blur on.

{F88555}king

Win 8.1 x64, 3x gtx580, 2.70a When rendering multiple layers in a batch animation with motion blur, some layers get extremely slow (compared to rendering one by one) and freeze Blender or whole system. Open attached file, press render animation. First (Mesh) layer renders fine, the second (floor/shadow) behaves like: - On CPU - extremely slow (compared to rendering only this render layer. not to confuse with scene layer), cancellation takes couple of minutes. - On all GPUs - system freeze (presumably it stays alive, but display gets no updates anymore). - On single non-primary GPU - extremely slow, blocks don't get updated until complete. Render cancellation takes a minute or two. This behavior is not observed if motion blur is turned off. This behavior is not observed if render layers are rendered one by one, manually un-chec the others, even with motion blur on. {[F88555](https://archive.blender.org/developer/F88555/err2.blend)}king

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @KonstantinsVisnevskis

Added subscriber: @KonstantinsVisnevskis

Added subscriber: @brecht

Added subscriber: @brecht

Looks like some sort of bug updating the motion blur BVH when another object is added to it.

Looks like some sort of bug updating the motion blur BVH when another object is added to it.

This issue was referenced by 1b1b71f697

This issue was referenced by 1b1b71f6970b54d70c99e9f616f93096df261e29

Fixed in 1b1b71f697, thanks for the report.

Fixed in 1b1b71f697, thanks for the report.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Brecht Van Lommel self-assigned this 2014-05-12 19:00:32 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40149
No description provided.