Fix T40149: cycles motion blur render problem with multiple render layers.